# React_Rocket

./: README.md
backend/: .env  .gitignore  Cargo.toml
backend/migrations/2022-09-21-044800_heroes/: up.sql
backend/migrations/2022-09-30-071020_users/: up.sql
backend/src/: hero.rs  lib.rs  main.rs
backend/src/db/: connecion.rs  hero.rs  mod.rs  query.rs  schema.rs  user.rs
backend/src/routes/: hero2.rs  mod.rs  notice.rs  test.rs  user.rs
frontend/: package-lock.json  package.json
frontend/src/: App.js
