[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
rocket_cors = "0.5.1"
rocket_contrib = "0.4"
rocket_codegen = "0.5.0-rc.1"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_derive = "1.0.126"
tokio = { version = "1.19.2", features = ["full"] }
diesel = { version = "1.4.7", features = ["mysql"] }
reqwest = { version = "0.11", features = ["json"] }
dotenv = "0.15.0"
r2d2 = "*"
r2d2-diesel = "*"